# sshtmux

./: LICENSE  Makefile  README.md  changelog  changelog.md  cli.py  pyproject.toml
example/: config_sample
sshmux/: main.py  main_tui.py
sshmux/cmds/config/: config_del.py  config_set.py
sshmux/cmds/group/: group_create.py  group_delete.py  group_list.py  group_rename.py  group_set.py  group_show.py
sshmux/cmds/host/: host_create.py  host_delete.py  host_install_key.py  host_list.py  host_rename.py  host_set.py  host_show.py  host_test.py
sshmux/sshm/: ssh_config.py  ssh_graph.py  ssh_group.py  ssh_host.py  ssh_parameters.py
sshmux/sshm/host_styles/: simple.py
sshtmux/: __init__.py  __main__.py  exceptions.py  globals.py  main.py  main_tui.py
sshtmux/cmds/: cmd_config.py  cmd_group.py  cmd_host.py  cmd_identity.py  cmd_snippets.py
sshtmux/cmds/config/: config_del.py  config_set.py
sshtmux/cmds/group/: group_create.py  group_delete.py  group_list.py  group_rename.py  group_set.py  group_show.py
sshtmux/cmds/host/: host_create.py  host_delete.py  host_install_key.py  host_list.py  host_rename.py  host_run.py  host_set.py  host_show.py  host_test.py
sshtmux/cmds/identity/: identity_create.py  identity_delete.py  identity_generate.py  identity_list.py  identity_run.py  identity_update.py
sshtmux/cmds/snippets/: snippets_list.py  snippets_run.py
sshtmux/core/: config.py
sshtmux/services/: connections_erros.py  identities.py  snippets.py  tmux.py
sshtmux/sshm/: __init__.py  ssh_config.py  ssh_graph.py  ssh_group.py  ssh_host.py  ssh_parameters.py  sshutils.py
sshtmux/sshm/host_styles/: card.py  json.py  panels.py  simple.py  table.py  table2.py
sshtmux/sshtmux/: ssh_config.py  ssh_graph.py  ssh_host.py  sshutils.py
sshtmux/sshtmux/host_styles/: panels.py
sshtmux/tools/: messages.py
sshtmux/tui/: tmux.py
tapes/: spash.tape  tui_demo.tape
tests/: test_1_config_parse_1_empty.py  test_1_config_parse_2_host_case_insensitive.py  test_1_config_parse_3_host_single.py  test_1_config_parse_4_host_multi.py  test_1_config_parse_5_pattern.py  test_1_config_parse_6_groups_empty.py  test_1_config_parse_7_groups_full.py  test_1_config_parse_8_config_opts.py  test_2_config_get_1_host.py  test_2_config_get_2_group.py  test_3_config_modify_1_host.py  test_3_config_modify_2_group.py  test_3_config_modify_3_config_opts.py  test_4_config_inheritance.py
