[tool.poetry]
name = "sshtmux"
homepage = "https://github.com/scjorge/sshtmux"
version = "0.0.1"
description = "SSH Config manager"
authors = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
rich = "^13.3"
textual = "^0.26"
pydantic = "^2.9.2"
libtmux = "^0.37.0"
keyring = "^25.5.0"


[tool.poetry.scripts]
sshm = "sshtmux.main:cli"
ssht = "sshtmux.main_tui:tui"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
